nginx-01_deployment.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nginx-ingress-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - image: nginx:1.14.2
        name: nginx-container
        ports:
        - containerPort: 80
