nginx-02_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  ports:
  - targetPort: 80
    port: 80
  selector:
    app: nginx-ingress
