03_nginx_AND_whoami_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginxandwhoami-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /nginx
          backend:
            serviceName: nginx-service
            servicePort: 80
        - path: /whoami
          backend:
            serviceName: whoami-service
            servicePort: 80
